fix bug to new chat
